[gd_scene load_steps=4 format=3 uid="uid://bc6gfnh71vo21"]

[ext_resource type="Script" uid="uid://c360qvpe3iu7h" path="res://Completion Question/completion_question.gd" id="1_ma46s"]
[ext_resource type="Texture2D" uid="uid://cupdarpqh7wdg" path="res://Completion Question/floral.png" id="2_454wn"]
[ext_resource type="FontFile" uid="uid://c4nj4hvp3na31" path="res://poco/Poco.ttf" id="2_ttqym"]

[node name="CompletionQuestion" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ma46s")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_454wn")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Question" type="Label" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.933333, 0.560784, 0.501961, 1)
theme_override_fonts/font = ExtResource("2_ttqym")
theme_override_font_sizes/font_size = 30
text = "Question"

[node name="DifficultyLabel" type="Label" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.560784, 0.501961, 1)
theme_override_fonts/font = ExtResource("2_ttqym")
theme_override_font_sizes/font_size = 30
text = "Difficulty"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_direction = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.933333, 0.560784, 0.501961, 1)
theme_override_fonts/font = ExtResource("2_ttqym")
theme_override_font_sizes/font_size = 30
text = "Timer"
horizontal_alignment = 1
vertical_alignment = 2

[node name="NextLevel" type="Button" parent="MarginContainer/TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_disabled_color = Color(0.964706, 0.968627, 0.917647, 1)
theme_override_colors/font_hover_pressed_color = Color(0.749513, 0.302977, 0.246031, 1)
theme_override_colors/font_hover_color = Color(0.749513, 0.302977, 0.246031, 1)
theme_override_colors/font_color = Color(0.933333, 0.560784, 0.501961, 1)
theme_override_fonts/font = ExtResource("2_ttqym")
theme_override_font_sizes/font_size = 30
text = "Next Level"
flat = true
icon_alignment = 1

[node name="DiscussionTimer" type="Timer" parent="."]

[connection signal="pressed" from="MarginContainer/TextureRect/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
